--- a/config/.env.config.yaml.example
+++ b/config/.env.config.yaml.example
@@ -1,8 +1,9 @@
 proxy:
   addr: :8081
-  username: admin
-  password: admin
   max_bytes: 2000000000
+  auth:
+    username: admin
+    password: admin
 
 log:
-  level: debug
+  level: info
